--- a/MultiMiner.Engine/MultiMiner.Engine.csproj
+++ b/MultiMiner.Engine/MultiMiner.Engine.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Configuration\DeviceConfiguration.cs" />
     <Compile Include="Configuration\EngineConfiguration.cs" />
     <Compile Include="KnownCoins.cs" />
-    <Compile Include="Configuration\XginerConfiguration.cs" />
+    <Compile Include="Configuration\XgminerConfiguration.cs" />
     <Compile Include="MiningEngine.cs" />
     <Compile Include="MiningPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
