Refactoring, moved patterns into parster, renamed parster to match parameter

--- a/MultiMiner.Xgminer/MultiMiner.Xgminer.csproj
+++ b/MultiMiner.Xgminer/MultiMiner.Xgminer.csproj
@@ -43,8 +43,7 @@
     <Compile Include="Device.cs" />
     <Compile Include="DeviceKind.cs" />
     <Compile Include="MiningPool.cs" />
-    <Compile Include="Parsers\DeviceOutputParser.cs" />
-    <Compile Include="DevicePatterns.cs" />
+    <Compile Include="Parsers\EnumerateDevicesParser.cs" />
     <Compile Include="Miner.cs" />
     <Compile Include="MinerConfiguration.cs" />
     <Compile Include="MinerParameter.cs" />
