Return a strongly typed list from GetCoinInformation() rather than a JSON array

--- a/MultiMiner.Coinchoose.Api/MultiMiner.Coinchoose.Api.csproj
+++ b/MultiMiner.Coinchoose.Api/MultiMiner.Coinchoose.Api.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiContext.cs" />
+    <Compile Include="CoinInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
