--- a/MultiMiner.Engine/MultiMiner.Engine.csproj
+++ b/MultiMiner.Engine/MultiMiner.Engine.csproj
@@ -53,6 +53,10 @@
     <Compile Include="SerializableDictionary.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MultiMiner.Coinchoose.Api\MultiMiner.Coinchoose.Api.csproj">
+      <Project>{d9b3f627-cb7a-454c-af8f-70c8fb584553}</Project>
+      <Name>MultiMiner.Coinchoose.Api</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MultiMiner.Xgminer.Api\MultiMiner.Xgminer.Api.csproj">
       <Project>{5b43ad9d-8b67-4aa8-b76d-aa83caf9d29f}</Project>
       <Name>MultiMiner.Xgminer.Api</Name>
