Added integration tests for Miner.DeviceList and Miner.EnumerateDevices

--- a/MultiMiner.Xgminer.Tests/MultiMiner.Xgminer.Tests.csproj
+++ b/MultiMiner.Xgminer.Tests/MultiMiner.Xgminer.Tests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="InstallerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MinerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MultiMiner.Xgminer\MultiMiner.Xgminer.csproj">
