--- a/MultiMiner.MobileMiner.Api/MultiMiner.MobileMiner.Api.csproj
+++ b/MultiMiner.MobileMiner.Api/MultiMiner.MobileMiner.Api.csproj
@@ -33,9 +33,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
