Added support for getting and deleting remote commands

--- a/MultiMiner.MobileMiner.Api/MultiMiner.MobileMiner.Api.csproj
+++ b/MultiMiner.MobileMiner.Api/MultiMiner.MobileMiner.Api.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ApiContext.cs" />
     <Compile Include="MiningStatistics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoteCommand.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
