Fixed issues parsing more than 10 devices and FPGAs

--- a/MultiMiner.Xgminer.Tests/MultiMiner.Xgminer.Tests.csproj
+++ b/MultiMiner.Xgminer.Tests/MultiMiner.Xgminer.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="InstallerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MinerTests.cs" />
+    <Compile Include="DeviceListParserTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MultiMiner.Xgminer\MultiMiner.Xgminer.csproj">
