--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>CoinsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ApiLogEntry.cs" />
+    <Compile Include="InputValidation.cs" />
     <Compile Include="InstallMinerForm.cs">
       <SubType>Form</SubType>
     </Compile>
