--- a/MultiMiner.Xgminer/MultiMiner.Xgminer.csproj
+++ b/MultiMiner.Xgminer/MultiMiner.Xgminer.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DeviceKind.cs" />
     <Compile Include="DevicePlatform.cs" />
     <Compile Include="Installer.cs" />
+    <Compile Include="LaunchFailedArgs.cs" />
     <Compile Include="LogLaunchArgs.cs" />
     <Compile Include="MinerBackend.cs" />
     <Compile Include="MiningPool.cs" />
