--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdvancedSettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdvancedSettingsForm.Designer.cs">
+      <DependentUpon>AdvancedSettingsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ApplicationConfiguration.cs" />
     <Compile Include="CoinsForm.cs">
       <SubType>Form</SubType>
@@ -109,6 +115,9 @@
     <Compile Include="WizardForm.Designer.cs">
       <DependentUpon>WizardForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AdvancedSettingsForm.resx">
+      <DependentUpon>AdvancedSettingsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CoinsForm.resx">
       <DependentUpon>CoinsForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -218,6 +227,8 @@
     <None Include="Resources\arrow_down.png" />
     <None Include="Resources\history.png" />
     <None Include="Resources\list-arrow_right.png" />
+    <None Include="Resources\application-gear.png" />
+    <None Include="Resources\view_options.png" />
     <Content Include="window_sel.ico" />
   </ItemGroup>
   <ItemGroup>
