Thorougly refactor StrategoryConfiguration so its not based on Profit alone

--- a/MultiMiner.Engine/MultiMiner.Engine.csproj
+++ b/MultiMiner.Engine/MultiMiner.Engine.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\CoinConfiguration.cs" />
+    <Compile Include="Configuration\Obsolete\StrategyConfiguration.cs" />
     <Compile Include="Configuration\StrategyConfiguration.cs" />
     <Compile Include="CryptoCoin.cs" />
     <Compile Include="Configuration\DeviceConfiguration.cs" />
