Add the ability to specify an internet URL for notifications, use for updates

--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -250,6 +250,7 @@
     <None Include="Resources\view_options.png" />
     <None Include="Resources\window_sel.png" />
     <None Include="Resources\application-info.png" />
+    <None Include="Resources\internet_browse.png" />
     <Content Include="window_sel.ico" />
   </ItemGroup>
   <ItemGroup>
