Added support for automatically setting Desktop Mode based on idle use

--- a/MultiMiner.Utility/MultiMiner.Utility.csproj
+++ b/MultiMiner.Utility/MultiMiner.Utility.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigurationReaderWriter.cs" />
+    <Compile Include="IdleTimeFinder.cs" />
     <Compile Include="ObjectCopier.cs" />
     <Compile Include="OSVersionPlatform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
