Add the ability to import & export CoinConfigurations.xml

--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -260,6 +260,8 @@
     <None Include="Resources\window_sel.png" />
     <None Include="Resources\application-info.png" />
     <None Include="Resources\internet_browse.png" />
+    <None Include="Resources\list-import.png" />
+    <None Include="Resources\list-export.png" />
     <Content Include="window_sel.ico" />
   </ItemGroup>
   <ItemGroup>
